--- a/Picro/Client/Shared/MainLayout.razor
+++ b/Picro/Client/Shared/MainLayout.razor
@@ -5,6 +5,7 @@
      @onclick="GlobalClickHandler.HandleClick"
      style="height: 100%">
     <MenuContainer />
+    <NotificationMenu />
     <div class="BodyContainer">
         @Body
     </div>
