--- a/Picro/Client/Components/Navigation/MenuContainer.razor
+++ b/Picro/Client/Components/Navigation/MenuContainer.razor
@@ -1,23 +1,16 @@
 ﻿@using Picro.Client.Components.General.Flex.Enums
 @using Picro.Client.Extensions
 @using Picro.Client.Utils
-@using System.Net.NetworkInformation
 
 <div id="BurgerMenu" class="BurgerMenu">
-    @if (!IsOpened)
+    @if (!_isOpened)
     {
-        <i @onclick=@HandleMenuButtonClick
-           class="material-icons MenuIcon">
-            menu
-        </i>
+        <i @onclick=@HandleMenuButtonClick class="material-icons MenuIcon">menu</i>
     }
     <Flex Id="MenuContainer"
           Class=@MenuContainerClass
           Direction="FlexDirection.Column">
-        <i @onclick=@HandleMenuButtonClick
-           class="material-icons MenuIconEmbedded">
-            menu
-        </i>
+        <i @onclick=@HandleMenuButtonClick class="material-icons MenuIconEmbedded">menu</i>
         <Flex Class="LinkContainer"
               Direction="FlexDirection.Column">
             <NavLink @onclick=@HandleMenuButtonClick
@@ -43,9 +36,9 @@
     [Inject]
     private IJSRuntime _jsRuntime { get; set; }
 
-    private string MenuContainerClass => $"MenuContainer {(IsOpened ? "Opened" : "Closed")}";
+    private string MenuContainerClass => $"MenuContainer {(_isOpened ? "Opened" : "Closed")}";
 
-    private bool IsOpened { get; set; }
+    private bool _isOpened;
 
     private BoundingRect _boundingRect;
 
@@ -59,7 +52,7 @@
 
     private void HandleMenuButtonClick(MouseEventArgs eventArgs)
     {
-        IsOpened = !IsOpened;
+        _isOpened = !_isOpened;
     }
 
     private async Task InitBoundingRect()
@@ -71,12 +64,12 @@
 
     private void OnGlobalClick(object sender, MouseEventArgs eventArgs)
     {
-        if (!IsOpened || _boundingRect.IsWithinXBounds(eventArgs.OffsetX))
+        if (!_isOpened || _boundingRect.IsWithinXBounds(eventArgs.OffsetX))
         {
             return;
         }
 
-        IsOpened = false;
+        _isOpened = false;
         StateHasChanged();
     }
 }
